--- a/src/index.html
+++ b/src/index.html
@@ -486,7 +486,7 @@
                     <img src="./assets/images/top/news/img-news_tv.svg" alt="" />
                     <div class="news__inner--textArea">
                         <div class="page__title--inner">
-                            <p data-anime="is-visible" data-anime="is-visible" class="page__subTitle">NEWS</p>
+                            <p data-anime="is-visible" class="page__subTitle">NEWS</p>
                             <h2 class="page__title"><span data-anime="is-visible" class="letter">お</span><span data-anime="is-visible" class="letter">知</span><span data-anime="is-visible" class="letter">ら</span><span data-anime="is-visible" class="letter">せ</span></h2>
                             <!-- <img class="page__title" src="./assets/images/top/news/img-news_title.png" alt="" /> -->
                         </div>
@@ -824,10 +824,10 @@
             <div class="more__btn--container">
                 <a class="more__btn" href="https://tmc4514.com/shop/" target="_blank">すべて見る</a>
             </div>
-            <div class="online__sale--img">
-                <div data-anime="popup"><img class="line__stamp--bg" src="./assets/images/top/online/line_stamp_bg.svg" alt="" /></div>
-                <div data-anime="popup"><img class="line__stamp--text" src="./assets/images/top/online/line_stamp_text.svg" alt="" /></div>
-                <div data-anime="popup"><img class="line__stamp--chara" src="./assets/images/top/online/line_stamp_chara.svg" alt="" /></div>
+            <div data-anime="is-visible" class="online__sale--img popup__text">
+                <div><img class="line__stamp--bg" src="./assets/images/top/online/line_stamp_bg.svg" alt="" /></div>
+                <div><img class="line__stamp--text" src="./assets/images/top/online/line_stamp_text.svg" alt="" /></div>
+                <div><img class="line__stamp--chara" src="./assets/images/top/online/line_stamp_chara.svg" alt="" /></div>
                 <!-- <img src="./assets/images/top/online/img-online_sale.svg" alt="" /> -->
             </div>
         </section>
