--- a/src/news.html
+++ b/src/news.html
@@ -154,8 +154,9 @@
     <main class="news__page">
         <section class="news__archive">
             <div class="page__title--inner">
-                <p class="page__subTitle">NEWS</p>
-                <h2 class="page__title">おしらせ</h2>
+                <p data-anime="initial-visible" class="page__subTitle">NEWS</p>
+                <h2 class="page__title"><span data-anime="is-visible" class="letter">お</span><span data-anime="is-visible" class="letter">し</span><span data-anime="is-visible" class="letter">ら</span><span data-anime="is-visible" class="letter">せ</span>
+                </h2>
             </div>
             <div class="news__tag">
                 <ul>
