--- a/src/service.html
+++ b/src/service.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="assets/css/variable.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/page.service.css" />
+    <link rel="stylesheet" href="assets/css/anime.css" />
 </head>
 
 <body>
@@ -154,42 +155,44 @@
         <section class="lowermain">
             <div class="lowermain_inner">
                 <div class="page__title--inner">
-                    <p class="page__subTitle">SERVICE</p>
-                    <h2 class="page__title">サービス内容</h2>
+                    <p data-anime="initial-visible" class="page__subTitle">SERVICE</p>
+                    <h2 class="page__title">
+                        <span data-anime="is-visible" class="letter">サ</span><span data-anime="is-visible" class="letter">ー</span><span data-anime="is-visible" class="letter">ビ</span><span data-anime="is-visible" class="letter">ス</span><span data-anime="is-visible" class="letter">内</span><span data-anime="is-visible" class="letter">容</span>
+                    </h2>
                 </div>
                 <div class="lower__charaInner">
-                    <img class="lower__chara--img1" src="./assets/images/service/service_main.svg" alt="" />
-                    <img class="lower__chara--surround1" src="./assets/images/top/about/img-about_surround1.svg" alt="" />
-                    <img class="lower__chara--surround2" src="./assets/images/top/about/img-about_surround2.svg" alt="" />
-                    <img class="lower__pinkCircle first" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
-                    <img class="lower__pinkCircle second" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                    <img class="lower__pinkCircle third" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                    <img class="lower__pinkCircle forth" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                    <img class="lower__pinkCircle fifth" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
-                    <img class="lower__pinkCircle sixth" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                    <img class="lower__whiteCircle first" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
+                    <div data-anime="initial-popup" class="lower__chara--wrap"><img class="lower__chara--img1" src="./assets/images/service/service_main.svg" alt="" /></div>
+                    <div class="lower__chara--surround1"><img src="./assets/images/top/about/img-about_surround1.svg" alt="" /></div>
+                    <div class="lower__chara--surround2"><img src="./assets/images/top/about/img-about_surround2.svg" alt="" /></div>
+                    <img class="lower__pinkCircle first star03" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
+                    <img class="lower__pinkCircle second star01" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                    <img class="lower__pinkCircle third star02" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                    <img class="lower__pinkCircle forth star03" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                    <img class="lower__pinkCircle fifth star01" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
+                    <img class="lower__pinkCircle sixth star02" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                    <img class="lower__whiteCircle first star03" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
                         alt="" />
-                    <img class="lower__whiteCircle second" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
+                    <img class="lower__whiteCircle second star01" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
                         alt="" />
-                    <img class="lower__whiteCircle third" src="./assets/images/top/about/img-about_whiteKirakira.svg"
+                    <img class="lower__whiteCircle third  star02" src="./assets/images/top/about/img-about_whiteKirakira.svg"
                         alt="" />
                 </div>
                 <div class="lower__textInner">
-                    <p class="lower__textInner--title PinkBg pcHide"><span>東京23区近郊の引越しは</span></p>
-                    <p class="lower__textInner--title PinkBg pcHide"><span>お任せを！信頼の引越業者</span></p>
-                    <p class="lower__textInner--title PinkBg spHide"><span>東京23区近郊の引越しはお任せを！</span></p>
-                    <p class="lower__textInner--title PinkBg spHide"><span>信頼の引越業者</span></p>
+                    <div data-anime="initial-slideVisible" class="lower__textInner--title PinkBg pcHide"><p><span>東京23区近郊の引越しは</span></p></div>
+                    <div data-anime="initial-slideVisible" class="lower__textInner--title PinkBg pcHide"><p><span>お任せを！信頼の引越業者</span></p></div>
+                    <div data-anime="initial-slideVisible" class="lower__textInner--title PinkBg spHide"><p><span>東京23区近郊の引越しはお任せを！</span></p></div>
+                    <div data-anime="initial-slideVisible" class="lower__textInner--title PinkBg spHide"><p><span>信頼の引越業者</span></p></div>
                     <p class="lower__textInner--text">当社は清潔をモットーに、<br class="sp-br">従業員すべてが非喫煙者！
                         <br>「引越はおもしろい！」<br class="sp-br">そんな風に感じていただけるような
                         <br>サービスをお届けします。</p>
                 </div>
                 <div class="lower__deco">
-                    <img class="lower__deco--chara1" src="./assets/images/service/service_chara01.svg" alt="">
-                    <img class="lower__deco--bg1" src="./assets/images/top/about/img-about_surround1.svg" alt="">
-                    <img class="lower__deco--bg2" src="./assets/images/top/about/img-about_surround2.svg" alt="">
-                    <img class="lower__deco--chara2" src="./assets/images/service/service_chara02.svg" alt="">
-                    <img class="lower__deco--bg3" src="./assets/images/top/about/img-about_surround1.svg" alt="">
-                    <img class="lower__deco--bg4" src="./assets/images/top/about/img-about_surround2.svg" alt="">
+                    <div class="lower__deco--chara1"><img data-anime="popup" src="./assets/images/service/service_chara01.svg" alt=""></div>
+                    <div class="lower__deco--bg1"><img src="./assets/images/top/about/img-about_surround1.svg" alt=""></div>
+                    <div class="lower__deco--bg2"><img src="./assets/images/top/about/img-about_surround2.svg" alt=""></div>
+                    <div class="lower__deco--chara2"><img data-anime="popup" src="./assets/images/service/service_chara02.svg" alt=""></div>
+                    <div class="lower__deco--bg3"><img src="./assets/images/top/about/img-about_surround1.svg" alt=""></div>
+                    <div class="lower__deco--bg4"><img src="./assets/images/top/about/img-about_surround2.svg" alt=""></div>
                 </div> 
             </div>
             <div class="lowermain_deco">
@@ -202,8 +205,8 @@
             </div>
         </section>
         <section class="service__point">
-            <div class="point__column">
-                <div class="point__column--item">
+            <div data-anime="delay-visible" class="point__column">
+                <div class="point__column--item popup__text">
                     <div class="point__column--speech">
                         <p>01</p>
                     </div>
@@ -242,7 +245,7 @@
                         <p>東京23区近郊を中心とし、千葉・神奈川・埼玉エリアの引越しを対応しております。また、長距離や引越しに関するお悩み、相談も受け付けておりますので、お気軽にお問い合わせください。</p>
                     </div> -->
                 </div>
-                <div class="point__column--item bottom">
+                <div class="point__column--item bottom popup__text">
                     <div class="point__column--speech">
                         <p>02</p>
                     </div>
@@ -280,7 +283,7 @@
                         <p>徹底した「禁煙」体制を実現いたします。作業を行うスタッフは全員タバコを吸わない人を採用しており、 お客様の大事な荷物に臭いが付かないよう十分注意を払っております。</p>
                     </div> -->
                 </div>
-                <div class="point__column--item">
+                <div class="point__column--item popup__text">
                     <div class="point__column--speech">
                         <p>03</p>
                     </div>
@@ -330,49 +333,49 @@
             <div class="grid__column about__column">
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="./assets/images/service/about_service1.png" alt="">
+                        <img data-anime="popup" src="./assets/images/service/about_service1.png" alt="">
                     </div>
                     <p class="about__column--text"><span>テレビの配線無料</span><br><span class="small">（電気工事がいらない程度）</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="./assets/images/service/about_service2.png" alt="">
+                        <img data-anime="popup" src="./assets/images/service/about_service2.png" alt="">
                     </div>
                     <p class="about__column--text"><span>洗濯機の<br>取外し・取付無料</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="./assets/images/service/about_service3.png" alt="">
+                        <img data-anime="popup" src="./assets/images/service/about_service3.png" alt="">
                     </div>
                     <p class="about__column--text"><span>ハンガーボックス<br>あり</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="./assets/images/service/about_service4.png" alt="">
+                        <img data-anime="popup" src="./assets/images/service/about_service4.png" alt="">
                     </div>
                     <p class="about__column--text"><span>布団袋あり</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="./assets/images/service/about_service5.png" alt="">
+                        <img data-anime="popup" src="./assets/images/service/about_service5.png" alt="">
                     </div>
                     <p class="about__column--text"><span>整理収納<br>アドバイザー</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="./assets/images/service/about_service6.png" alt="">
+                        <img data-anime="popup" src="./assets/images/service/about_service6.png" alt="">
                     </div>
                     <p class="about__column--text"><span>その他</span><br><span class="small">（例：簡易掃除）</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="./assets/images/service/about_service7.png" alt="">
+                        <img data-anime="popup" src="./assets/images/service/about_service7.png" alt="">
                     </div>
                     <p class="about__column--text"><span>クレーンでの<br>搬入•搬出</span><span class="small">（有料•委託）</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="./assets/images/service/about_service8.png" alt="">
+                        <img data-anime="popup" src="./assets/images/service/about_service8.png" alt="">
                     </div>
                     <p class="about__column--text">エアコン<br>取外し•取付<span class="small">（有料•委託）</span></p>
                 </div>
@@ -386,14 +389,18 @@
             </div>
         </section>
         <section class="service__flow">
-            <img class="flow__chara" src="./assets/images//service/flow_chara.svg" alt="">
+            <div data-anime="popup" class="flow__chara">
+                <img class="guragura" src="./assets/images//service/flow_chara.svg" alt="">
+            </div>
             <div class="page__title--inner">
-                <p class="page__subTitle">FLOW</p>
-                <h2 class="page__title">サービスの流れ</h2>
+                <p data-anime="is-visible" class="page__subTitle">FLOW</p>
+                <h2 class="page__title">
+                    <span data-anime="is-visible" class="letter">サ</span><span data-anime="is-visible" class="letter">ー</span><span data-anime="is-visible" class="letter">ビ</span><span data-anime="is-visible" class="letter">ス</span><span data-anime="is-visible" class="letter">の</span><span data-anime="is-visible" class="letter">流</span><span data-anime="is-visible" class="letter">れ</span>
+                </h2>
             </div>
             <div class="flow__inner">
                 <div class="flow__item">
-                    <div class="flow__item--title">
+                    <div data-anime="is-visible" class="flow__item--title">
                         <p>引越しの前にまず準備</p>
                     </div>
                     <div class="flow__item--slide js-slide--service js-slide-common">
@@ -405,7 +412,7 @@
                     </div>
                 </div>
                 <div class="flow__item">
-                    <div class="flow__item--title">
+                    <div data-anime="is-visible" class="flow__item--title">
                         <p>お引越し当日の流れ</p>
                     </div>
                     <div class="flow__item--slide js-slide--service js-slide-common">
@@ -424,11 +431,17 @@
         </section>
         <section id="introduction" class="service__introduction">
             <div class="page__title--inner">
-                <p class="page__subTitle">引越しが楽しくなる！</p>
-                <h2 class="page__title">こだわりの<br class="sp-br">段ボール紹介</h2>
+                <p data-anime="is-visible" class="page__subTitle">引越しが楽しくなる！</p>
+                <h2 class="page__title">
+                    <span data-anime="is-visible" class="letter">こ</span><span data-anime="is-visible" class="letter">だ</span><span data-anime="is-visible" class="letter">わ</span><span data-anime="is-visible" class="letter">り</span><span data-anime="is-visible" class="letter">の</span><br class="sp-br"><span data-anime="is-visible" class="letter">段</span><span data-anime="is-visible" class="letter">ボ</span><span data-anime="is-visible" class="letter">ー</span><span data-anime="is-visible" class="letter">ル</span><span data-anime="is-visible" class="letter">紹</span><span data-anime="is-visible" class="letter">介</span>
+                </h2>
             </div>
             <div class="introduction__column">
                 <div class="introduction__size">
+                    <div class="bgPinkText__inner palePink infinite__scroll">
+                        <p class="bgPinkText">TMC TMC TMC TMC TMC TMC TMC TMC TMC</p>
+                        <p class="bgPinkText">TMC TMC TMC TMC TMC TMC TMC TMC TMC</p>
+                    </div>
                     <div class="size__tags">
                         <div class="tag small active">小</div>
                         <div class="tag large">大</div>
@@ -438,8 +451,6 @@
                         <img class="cardboard__img small__cardboard02" src="./assets/images/service/introduction_small02.png" alt="" style="display: none;">
                         <img class="cardboard__img small__cardboard03" src="./assets/images/service/introduction_small03.png" alt="" style="display: none;">
                         <img class="cardboard__img small__cardboard04" src="./assets/images/service/introduction_small04.png" alt="" style="display: none;">
-                        <!-- <img class="cardboard__img small__cardboard" src="./assets/images/service/introduction_large.png" alt="">
-                        <img class="cardboard__img large__cardboard" src="./assets/images/service/introduction_large.png" alt=""> -->
                     </div>
                     <div class="size__pagenation">
                         <div class="pagenation prev small active"></div>
@@ -448,12 +459,12 @@
                 </div>
                 <div class="introduction__point">
                     <div class="point__img">
-                        <p class="service__column--title_sp">うれしいPOINT</p>
+                        <div data-anime="is-visible" class="popup__text"><p data-anime="is-visible" class="service__column--title_sp">うれしいPOINT</p></div>
                         <img src="" alt="">
                     </div>
                     <div class="point__content">
                         <div class="point__content--inner">
-                            <p class="service__column--title">うれしいPOINT</p>
+                            <div data-anime="is-visible" class="popup__text"><p class="service__column--title"><span>うれしいPOINT</span></p></div>
                             <h4 class="point__content--title">引越し後も活用できちゃう！</h4>
                             <svg class="point__content--line" viewBox="0 0 340 10">
                                 <line x1="-10" y1="0" x2="340" y2="0"/>
@@ -467,13 +478,10 @@
                     </div>
                 </div>
             </div>
-            <div class="bgPinkText__inner palePink">
-                <p class="bgPinkText">TMC TMC TMC TMC TMC TMC TMC</p>
-            </div>
         </section>
         <section class="service__message lower__message">
-            <img class="message__bg--title" src="./assets/images/message_title.svg" alt="">
-            <img class="message__chara--img" src="./assets/images/message__chara.svg" alt="">
+            <img data-anime="is-visible" class="message__bg--title popup__text"  src="./assets/images/message_title.svg" alt="">
+            <img data-anime="is-visible" class="message__chara--img popup__text" src="./assets/images/message__chara.svg" alt="">
             <div class="message__inner">
                 <p class="message__text">たかくら引越センターの段ボールは、<br>
                     「引越しを楽しんでもらいたい」<br class="sp-br">そんな思いで作りました。<br>
@@ -575,6 +583,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <script src="assets/js/anime.js"></script>
 </body>
 
 </html>
