引越屋の表記揺れ修正

--- a/src/about.html
+++ b/src/about.html
@@ -226,7 +226,7 @@
                     <div class="point__grid--img">
                         <img class="point__grid--chara" src="./assets/images/about/about_point1.jpg" alt="" />
                     </div>
-                    <p class="point__grid--title">日本一小さな引越し屋</p>
+                    <p class="point__grid--title">日本一小さな引越屋</p>
                     <div class="point__grid--text">
                         <p>東京23区近郊を中心とし、千葉・神奈川・埼玉エリアの引越しを行っています。</p>
                     </div>
