--- a/src/index.html
+++ b/src/index.html
@@ -540,7 +540,7 @@
                 <p class="page__text">
                     TMC(たかくら引越センター)は、<br />
                     東京23区均衡を中心に、<br class="sp-br" />千葉・神奈川・埼玉エリアを<br />
-                    専門とした日本一小さな引っ越し屋です。<br />
+                    専門とした日本一小さな引越屋です。<br />
                     引越し作業が楽しい！だけではなく、<br />
                     引越しをすることで<br class="sp-br" />皆様の人生に変化をもたらせ、<br class="pc-br" />
                     環境の変化が<br class="sp-br" />新たな出逢いや発見に繋がる・・・<br />
