--- a/src/estimate.html
+++ b/src/estimate.html
@@ -446,7 +446,7 @@
                 </div>
                 <div class="form__item">
                     <div class="form__label form__label--marginTop">
-                        <label for="name">写真アップロード<br class="tb2-br">（間取り写真）</label>
+                        <label for="name">写真アップロード<br>（お部屋全体のお写真をお撮りください）</label>
                     </div>
                     <div class="form__area form__area--column">
                         <div class="form__content"><input
