--- a/src/policy.html
+++ b/src/policy.html
@@ -155,7 +155,7 @@
         <section class="lowermain">
             <div class="lowermain_inner">
                 <div class="page__title--inner">
-                    <h2 data-anime="initial-visible" class="page__title single__title">プライバシーポリシー</h2>
+                    <h2 data-anime="initial-visible" class="page__title page__title--nosub">プライバシーポリシー</h2>
                 </div>
             </div>
             <div class="policy__wrap">
