--- a/src/legal.html
+++ b/src/legal.html
@@ -155,7 +155,7 @@
         <section class="lowermain">
             <div class="lowermain_inner">
                 <div class="page__title--inner">
-                    <h2 data-anime="initial-visible" class="page__title single__title">特定商取引法に<br class="sp-br">基づく表記</h2>
+                    <h2 data-anime="initial-visible" class="page__title page__title--nosub">特定商取引法に<br class="sp-br">基づく表記</h2>
                 </div>
             </div>
             <div class="legal__wrap">
