--- a/src/characters.html
+++ b/src/characters.html
@@ -163,10 +163,10 @@
                 <div class="lower__charaInner">
                     <!-- <img class="lower__chara--img1" src="./assets/images/characters/characters_main.png" alt="" /> -->
                     <div data-anime="delay-visible" class="lower__chara--img">
-                        <img class="lower__chara--img01 popup__text" src="./assets/images/characters/characters_main01.png" alt="キャラクター画像" />
-                        <img class="lower__chara--img02 popup__text" src="./assets/images/characters/characters_main02.png" alt="キャラクター画像" />
-                        <img class="lower__chara--img03 popup__text" src="./assets/images/characters/characters_main03.png" alt="キャラクター画像" />
-                        <img class="lower__chara--img04 popup__text" src="./assets/images/characters/characters_main04.png" alt="キャラクター画像" />
+                        <img class="lower__chara--img01 popup__text" src="./assets/images/characters/characters_main01.svg" alt="キャラクター画像" />
+                        <img class="lower__chara--img02 popup__text" src="./assets/images/characters/characters_main02.svg" alt="キャラクター画像" />
+                        <img class="lower__chara--img03 popup__text" src="./assets/images/characters/characters_main03.svg" alt="キャラクター画像" />
+                        <img class="lower__chara--img04 popup__text" src="./assets/images/characters/characters_main04.svg" alt="キャラクター画像" />
                     </div>
                     <div class="lower__chara--surround1"><img src="./assets/images/top/about/img-about_surround1.svg" alt="" /></div>
                     <div class="lower__chara--surround2"><img src="./assets/images/top/about/img-about_surround2.svg" alt="" /></div>
